<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/themeBackground"
    android:padding="1dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_text_layout"
                android:hint="@string/search_wiki"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/ic_wikipedia"
                app:endIconMode="custom"
                app:helperText="@string/wiki_helper_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_text_layout"
                    android:backgroundTint="?attr/textInputEditTextBackground"
                    android:fontFamily="?attr/themeFontFamily"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/dayChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="?attr/themeFontFamily"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/today_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="?attr/themeFontFamily"
                    android:text="@string/today"
                    app:chipStrokeColor="?attr/themeChipStrokeColor"
                    app:chipStrokeWidth="2dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/yesterday_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="?attr/themeFontFamily"
                    android:text="@string/yesterday"
                    app:chipStrokeColor="?attr/themeChipStrokeColor"
                    app:chipStrokeWidth="2dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/before_yesterday_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="?attr/themeFontFamily"
                    android:text="@string/before_yesterday"
                    app:chipStrokeColor="?attr/themeChipStrokeColor"
                    app:chipStrokeWidth="2dp" />
            </com.google.android.material.chip.ChipGroup>

            <com.geekbrains.materialyou.util.EquilateralImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/photo_of_the_day_stub"
                app:layout_anchor="@+id/nestedScrollView"
                app:layout_anchorGravity="center"
                app:srcCompat="@drawable/ic_no_photo_vector" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/themeChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/mars_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="?attr/themeFontFamily"
                    android:text="@string/mars_theme"
                    app:chipStrokeColor="?attr/themeChipStrokeColor"
                    app:chipStrokeWidth="2dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/titan_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="?attr/themeFontFamily"
                    android:text="@string/titan_theme"
                    app:chipStrokeColor="?attr/themeChipStrokeColor"
                    app:chipStrokeWidth="2dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/earth_chip"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="?attr/themeFontFamily"
                    android:text="@string/default_theme"
                    app:chipStrokeColor="?attr/themeChipStrokeColor"
                    app:chipStrokeWidth="2dp" />
            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        layout="@layout/loading_bar"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="center" />

    <include layout="@layout/bottom_sheet_layout" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="?attr/themeColorPrimary"
        app:fabAlignmentMode="center"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/themeColorFloatingButton"
        app:layout_anchor="@id/bottom_app_bar"
        app:srcCompat="@drawable/ic_plus_fab"
        app:tint="@android:color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

